--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ jobs:
     name: "Tests"
     script: yarn run test && yarn run lint && yarn run checktypes
   - script: skip
+    # TODO: add 'stage' key = 'deploy' so that this step runs in series, not parallel
+    #       See https://docs.travis-ci.com/user/build-stages/#how-do-build-stages-work
     name: "Deploy Staging"
     # Maybe ea-forum-staging or ea-forum-devel
     if: branch = ci-deploy AND type != pull_request
