--- a/package.json
+++ b/package.json
@@ -172,6 +172,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-sortable-hoc": "^1.10.1",
+    "react-test-renderer": "^16.8.0",
     "recompose": "^0.26.0",
     "request": "^2.88.0",
     "rss": "^1.2.1",
