--- a/package.json
+++ b/package.json
@@ -74,14 +74,15 @@
     "@types/uuid": "^7.0.2",
     "akismet-api": "^4.2.0",
     "algoliasearch": "^3.29.0",
-    "apollo-cache-inmemory": "^1.4.2",
-    "apollo-client": "^2.6.3",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
     "apollo-errors": "^1.9.0",
-    "apollo-link-batch-http": "^1.2.11",
-    "apollo-link-error": "^1.1.5",
-    "apollo-link-schema": "^1.1.1",
-    "apollo-server": "2.3.3",
-    "apollo-server-express": "2.3.3",
+    "apollo-link": "^1.2.12",
+    "apollo-link-batch-http": "^1.2.14",
+    "apollo-link-error": "^1.1.13",
+    "apollo-link-schema": "^1.2.5",
+    "apollo-server": "2.15.0",
+    "apollo-server-express": "2.15.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "bowser": "^1.9.4",
@@ -193,7 +194,8 @@
     "popper.js": "1.15.0",
     "prop-types": "15.7.2",
     "react-is": "16.12.0",
-    "tslib": "1.10.0"
+    "tslib": "1.10.0",
+    "apollo-link": "^1.2.14"
   },
   "private": true,
   "devDependencies": {
