--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/papaparse": "^5.0.3",
     "@types/pg": "^7.14.3",
     "@types/qs": "^6.9.1",
+    "@types/react": "16.8.0",
     "@types/react-autosuggest": "^9.3.13",
     "@types/react-dom": "^16.9.6",
     "@types/react-geosuggest": "^2.7.10",
