--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "reinstall-ckeditor": "yarn add ./public/lesswrong-editor"
   },
   "dependencies": {
+    "@apollo/client": "^3.0.0",
     "@babel/runtime": "^7.7.7",
     "@ckeditor/ckeditor5-build-balloon-block": "./public/lesswrong-editor",
     "@google/maps": "^0.5.5",
@@ -75,12 +76,7 @@
     "@types/uuid": "^7.0.2",
     "akismet-api": "^4.2.0",
     "algoliasearch": "^3.29.0",
-    "apollo-cache-inmemory": "^1.4.2",
-    "apollo-client": "^2.6.3",
     "apollo-errors": "^1.9.0",
-    "apollo-link-batch-http": "^1.2.11",
-    "apollo-link-error": "^1.1.5",
-    "apollo-link-schema": "^1.1.1",
     "apollo-server": "2.3.3",
     "apollo-server-express": "2.3.3",
     "bcrypt": "^3.0.6",
@@ -155,7 +151,6 @@
     "qs": "6.7.0",
     "raf": "3.4.1",
     "react": "16.8.0",
-    "react-apollo": "^3.0.0",
     "react-autosuggest": "^9.4.0",
     "react-bootstrap": "1.0.0-beta.14",
     "react-cookie": "^4.0.1",
