deploy has no reason to update lockfile

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python: 3.7
 node_js:
 - 12
 before_install:
-- yarn install
+- yarn install --pure-lockfile
 - command -v meteor >/dev/null 2>&1 || curl https://install.meteor.com | /bin/sh
 before_script:
 - export PATH=$HOME/.meteor:$PATH
