--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "test-prod": "meteor test-packages ./packages/lesswrong --driver-package meteortesting:mocha --exclude-archs web.browser.legacy --settings settings.json --port 3200 --full-app --once",
     "encrypt-credentials": "tar czf credentials.tar.gz --exclude '.git/*' -C ../ ./LessWrong-Credentials; travis encrypt-file credentials.tar.gz --add; rm credentials.tar.gz",
     "generate": "scripts/generateTypes.sh",
-    "reinstall-ckeditor": "yarn add ./public/lesswrong-editor"
+    "reinstall-ckeditor": "cd ./public/lesswrong-editor && yarn install && yarn run build && cd ../.. && yarn add ./public/lesswrong-editor"
   },
   "dependencies": {
     "@babel/runtime": "^7.7.7",
     "@ckeditor/ckeditor5-build-balloon-block": "./public/lesswrong-editor",
     "@google/maps": "^0.5.5",
-    "@lesswrong/lesswrong-editor": "./public/lesswrong-editor/",
+    "@lesswrong/lesswrong-editor": "./public/lesswrong-editor",
     "@material-ui/core": "3.1.2",
     "@material-ui/icons": "^3.0.0",
     "@material-ui/lab": "^3.0.0-alpha.30",
