Change title to small caps

--- a/sample_settings.json
+++ b/sample_settings.json
@@ -9,7 +9,7 @@
     "aboutPostId": "dummyId",
     "faviconUrl": "https://res.cloudinary.com/lesswrong-2-0/image/upload/v1497915096/favicon_lncumn.ico",
     "forumSettings": {
-      "headerTitle": "LESSWRONG",
+      "headerTitle": "LessWrong",
       "shortForumTitle": "LW",
       "tabTitle": "LessWrong 2.0"
     },
