Remove the "2.0" from "LessWrong 2.0"

--- a/sample_settings.json
+++ b/sample_settings.json
@@ -11,7 +11,7 @@
     "forumSettings": {
       "headerTitle": "LESSWRONG",
       "shortForumTitle": "LW",
-      "tabTitle": "LessWrong 2.0"
+      "tabTitle": "LessWrong"
     },
     "analytics": {
       "environment": "localhost"
