Use universal react-app for initial template

--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "cloudinary-react": "1.0.6",
     "compression": "^1.7.3",
     "cookie-parser": "^1.4.3",
+    "create-react-app": "^3.4.1",
     "crypto-js": "^3.1.9-1",
     "dataloader": "^1.4.0",
     "deepmerge": "^1.2.0",
