--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ jobs:
     # TODO: add 'stage' key = 'deploy' so that this step runs in series, not parallel
     #       See https://docs.travis-ci.com/user/build-stages/#how-do-build-stages-work
     name: "Deploy Staging"
-    if: branch = ea-forum-devel AND type != pull_request
+    if: branch = ea-dev AND type != pull_request
     deploy: &staging
       provider: script
       script: bash ./deploy.sh ./settings-staging.json ./config-staging.secret
@@ -25,7 +25,7 @@ jobs:
         branch: ea-forum-devel
   - script: skip
     name: "Deploy Production"
-    if: branch = ea-forum-master AND type != pull_request
+    if: branch = ea-master AND type != pull_request
     deploy: &production
       provider: script
       script: bash ./deploy.sh ./settings-prod.json ./config-prod.secret
