Improve turndown conversion and add superscript support to markdown

--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
     "import": "0.0.6",
     "intercom-client": "^2.10.2",
     "intl": "^1.2.4",
+    "joplin-turndown-plugin-gfm": "^1.0.12",
     "jsdom": "^13.1.0",
     "jsonwebtoken": "^8.5.1",
     "juice": "^7.0.0",
@@ -144,6 +145,7 @@
     "markdown-it-container": "^2.0.0",
     "markdown-it-footnote": "^3.0.1",
     "markdown-it-sub": "^1.0.0",
+    "markdown-it-sup": "^1.0.0",
     "mathjax": "^2.7.5",
     "mathjax-node": "^2.1.1",
     "mathjax-node-page": "3.2.0",
