Revert to default library

--- a/package.json
+++ b/package.json
@@ -133,7 +133,6 @@
     "import": "0.0.6",
     "intercom-client": "^2.10.2",
     "intl": "^1.2.4",
-    "joplin-turndown-plugin-gfm": "^1.0.12",
     "jsdom": "^13.1.0",
     "jsonwebtoken": "^8.5.1",
     "juice": "^7.0.0",
@@ -186,6 +185,7 @@
     "speakingurl": "^9.0.0",
     "tlds": "^1.203.1",
     "turndown": "^4.0.2",
+    "turndown-plugin-gfm": "^1.0.2",
     "typescript": "^3.8.3",
     "underscore": "^1.9.1",
     "universal-cookie": "^4.0.2",
