login token authentication and Meteor backwards compatibility

--- a/package.json
+++ b/package.json
@@ -147,6 +147,9 @@
     "moment": "^2.22.2",
     "mz": "^2.7.0",
     "papaparse": "^4.6.2",
+    "passport": "^0.4.1",
+    "passport-custom": "^1.1.1",
+    "passport-local": "^1.0.0",
     "pg": "^6.1.5",
     "pg-promise": "^5.6.7",
     "prop-types": "^15.7.2",
