--- a/.editorconfig
+++ b/.editorconfig
@@ -13,7 +13,7 @@ insert_final_newline = true
 max_line_length = 120
 quote_type = auto
 spaces_around_operators = true
-trim_trailing_whitespace = true
+trim_trailing_whitespace = false
 
 [*.md]
 
