Set up book checkout component [WIP]

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@sentry/core": "^5.12.4",
     "@sentry/integrations": "^5.12.4",
     "@sentry/node": "^5.12.4",
+    "@stripe/stripe-js": "^1.11.0",
     "@types/chai-as-promised": "^7.1.2",
     "@types/cheerio": "^0.22.16",
     "@types/classnames": "^2.2.9",
@@ -177,6 +178,7 @@
     "sanitize-html": "^1.18.2",
     "simpl-schema": "^1.5.0",
     "speakingurl": "^9.0.0",
+    "stripe": "^8.126.0",
     "tlds": "^1.203.1",
     "turndown": "^4.0.2",
     "turndown-plugin-gfm": "^1.0.2",
