Move Meteor-specific stuff behind a symlink, so it can be easily switched with Webpack

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,3 +1,5 @@
 packages/_*
 packages/vulcan-*/**/*.test.js
 packages/ddp-server
+packages/lesswrong/platform/meteor
+packages/lesswrong/platform/webpack
