--- a/webpack/package.json
+++ b/webpack/package.json
@@ -1,34 +1,11 @@
 {
-  "name": "universal",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "LessWrong",
+  "version": "2.1.0",
   "scripts": {
     "build": "npx esbuild ./src/server.js --bundle '--define:process.env.NODE_ENV=\"development\"' --outfile='./build/server/js/bundle2.js' --platform=node --external:akismet-api --external:canvas --external:express --external:mz --external:pg --external:pg-promise --external:mathjax-node --external:jsdom --external:@sentry/node --external:node-fetch --external:later --external:turndown --external:apollo-server --external:apollo-server-express --sourcemap && npx esbuild ./src/client.js --bundle '--define:process.env.NODE_ENV=\"development\"' --outfile='./build/client/js/bundle.js' --sourcemap --target=es6 --define:global=window",
     "start": "export NODE_ENV=development && nodemon --ignore './build/' --exec 'yarn run build && node -r source-map-support/register -- build/server/js/bundle2.js'",
     "build:prod": "export NODE_ENV=development && webpack -p",
     "start:prod": "export NODE_ENV=development && nodemon --ignore './build/' --exec 'yarn run build && node -- build/server/js/bundle.js'"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "7.12.3",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-optional-chaining": "^7.12.1",
-    "@babel/plugin-transform-runtime": "7.11.5",
-    "@babel/preset-env": "7.11.5",
-    "@babel/preset-react": "7.10.4",
-    "@babel/preset-typescript": "^7.12.1",
-    "esbuild": "^0.7.16",
-    "esbuild-loader": "^2.4.0",
-    "fork-ts-checker-webpack-plugin": "^5.2.0",
-    "nodemon": "2.0.4",
-    "speed-measure-webpack-plugin": "^1.3.3",
-    "ts-loader": "^8.0.5",
-    "typescript": "^4.0.3",
-    "webpack": "^5.1.3",
-    "webpack-cli": "^4.0.0"
   },
   "dependencies": {
     "@apollo/client": "^3.2.0",
@@ -200,6 +177,35 @@
     "universal-cookie-express": "^2.2.0",
     "url": "^0.11.0",
     "webpack-node-externals": "^2.5.2"
+  },
+  "devDependencies": {
+    "@babel/core": "7.12.3",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.1",
+    "@babel/plugin-transform-runtime": "7.11.5",
+    "@babel/preset-env": "7.11.5",
+    "@babel/preset-react": "7.10.4",
+    "@babel/preset-typescript": "^7.12.1",
+    "@graphql-codegen/cli": "^1.9.1",
+    "@graphql-codegen/fragment-matcher": "^1.9.0",
+    "@graphql-codegen/introspection": "^1.9.0",
+    "esbuild": "^0.7.16",
+    "esbuild-loader": "^2.4.0",
+    "eslint": "^7.14.0",
+    "eslint-config-ckeditor5": "^3.1.0",
+    "eslint-config-meteor": "^0.1.1",
+    "eslint-import-resolver-meteor": "^0.4.0",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "fork-ts-checker-webpack-plugin": "^5.2.0",
+    "nodemon": "2.0.4",
+    "speed-measure-webpack-plugin": "^1.3.3",
+    "ts-loader": "^8.0.5",
+    "typescript": "^4.0.3",
+    "webpack": "^5.1.3",
+    "webpack-cli": "^4.0.0"
   },
   "resolutions": {
     "jsdom": "^16.4.0",
