--- a/webpack/package.json
+++ b/webpack/package.json
@@ -40,6 +40,7 @@
     "@types/meteor": "^1.4.42",
     "@types/mocha": "^5.2.7",
     "@types/moment": "^2.13.0",
+    "@types/mongodb": "^3.6.3",
     "@types/node": "12",
     "@types/node-fetch": "^2.5.6",
     "@types/papaparse": "^5.0.3",
@@ -203,7 +204,6 @@
     "nodemon": "2.0.4",
     "speed-measure-webpack-plugin": "^1.3.3",
     "ts-loader": "^8.0.5",
-    "typescript": "^4.0.3",
     "webpack": "^5.1.3",
     "webpack-cli": "^4.0.0"
   },
