eslint works under webpack

--- a/webpack/package.json
+++ b/webpack/package.json
@@ -100,7 +100,6 @@
     "feedparser-promised": "^1.2.2",
     "graphql": "^14.0.0",
     "graphql-date": "^1.0.2",
-    "graphql-scalars": "^1.4.0",
     "graphql-server-express": "^0.6.0",
     "graphql-tag": "^2.9.2",
     "graphql-tools": "^3.0.5",
@@ -190,6 +189,8 @@
     "@graphql-codegen/cli": "^1.9.1",
     "@graphql-codegen/fragment-matcher": "^1.9.0",
     "@graphql-codegen/introspection": "^1.9.0",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
     "esbuild": "^0.8.21",
     "esbuild-loader": "^2.6.1",
     "eslint": "^7.14.0",
@@ -198,6 +199,7 @@
     "eslint-import-resolver-meteor": "^0.4.0",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-meteor": "^5.1.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "fork-ts-checker-webpack-plugin": "^5.2.0",
