--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "@types/lru-cache": "^5.1.0",
     "@types/meteor": "^1.4.42",
     "@types/mocha": "^5.2.7",
+    "@types/moment": "^2.13.0",
+    "@types/mongodb": "^3.6.3",
     "@types/node": "12",
     "@types/node-fetch": "^2.5.6",
     "@types/papaparse": "^5.0.3",
