Pin @types/cheerio and @types/underscore to avoid breaking changes
See https://github.com/DefinitelyTyped/DefinitelyTyped/pull/46006
"DT explicitly does not use semantic versioning, and DT package versions
should always be pinned." Updates to these two packages introduced type
errors (for dumb reasons).

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@sentry/node": "^5.12.4",
     "@stripe/stripe-js": "^1.11.0",
     "@types/chai-as-promised": "^7.1.2",
-    "@types/cheerio": "^0.22.16",
+    "@types/cheerio": "0.22.16",
     "@types/classnames": "^2.2.9",
     "@types/cookie-parser": "^1.4.2",
     "@types/crypto-js": "^3.1.44",
@@ -78,7 +78,7 @@
     "@types/recompose": "^0.30.7",
     "@types/sanitize-html": "^1.22.0",
     "@types/speakingurl": "^13.0.2",
-    "@types/underscore": "^1.9.4",
+    "@types/underscore": "1.9.4",
     "@types/uuid": "^7.0.2",
     "akismet-api": "^4.2.0",
     "algoliasearch": "^3.29.0",
