--- a/webpack/package.json
+++ b/webpack/package.json
@@ -22,7 +22,7 @@
     "@std/esm": "^0.26.0",
     "@stripe/stripe-js": "^1.11.0",
     "@types/chai-as-promised": "^7.1.2",
-    "@types/cheerio": "^0.22.16",
+    "@types/cheerio": "0.22.16",
     "@types/classnames": "^2.2.9",
     "@types/cookie-parser": "^1.4.2",
     "@types/crypto-js": "^3.1.44",
@@ -57,7 +57,7 @@
     "@types/recompose": "^0.30.7",
     "@types/sanitize-html": "^1.22.0",
     "@types/speakingurl": "^13.0.2",
-    "@types/underscore": "^1.9.4",
+    "@types/underscore": "1.9.4",
     "@types/uuid": "^7.0.2",
     "akismet-api": "^4.2.0",
     "algoliasearch": "^3.29.0",
