--- a/webpack/tsconfig.json
+++ b/webpack/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "compilerOptions": {
+    "lib": ["es2015", "dom"],
+    "noImplicitAny": false,
+    "noImplicitThis": true,
+    "strictNullChecks": true,
     "jsx": "react",
-    "lib": ["es6", "dom"],
     "rootDir": "src",
     "module": "commonjs",
     "target": "es5",
