--- a/webpack/package.json
+++ b/webpack/package.json
@@ -198,6 +198,7 @@
     "@typescript-eslint/parser": "^4.8.1",
     "esbuild": "^0.8.21",
     "esbuild-loader": "^2.6.1",
+    "chai-as-promised": "^7.1.1",
     "eslint": "^7.14.0",
     "eslint-config-ckeditor5": "^3.1.0",
     "eslint-config-meteor": "^0.1.1",
