--- a/.eslintignore
+++ b/.eslintignore
@@ -1,5 +1,6 @@
 packages/_*
 packages/vulcan-*/**/*.test.js
 packages/ddp-server
+packages/webapp
 packages/lesswrong/platform/meteor
 packages/lesswrong/platform/webpack
