--- a/webpack/package.json
+++ b/webpack/package.json
@@ -3,10 +3,10 @@
   "version": "2.1.0",
   "scripts": {
     "build": "node build.js",
-    "start": "export NODE_ENV=development && nodemon --ignore './build/' --exec 'yarn run build && node -r source-map-support/register -- build/server/js/bundle2.js --settings ../settings.json'",
-    "debug": "export NODE_ENV=development && nodemon --ignore './build/' --exec 'yarn run build && node inspect --trace-warnings -r source-map-support/register -- build/server/js/bundle2.js --settings ../settings.json'",
+    "start": "export NODE_ENV=development && nodemon --ignore './build/' --exec 'yarn run build && node -r source-map-support/register -- build/server/js/serverBundle.js --settings ../settings.json'",
+    "debug": "export NODE_ENV=development && nodemon --ignore './build/' --exec 'yarn run build && node inspect --trace-warnings -r source-map-support/register -- build/server/js/serverBundle.js --settings ../settings.json'",
     "build:prod": "export NODE_ENV=development && webpack -p",
-    "start:prod": "export NODE_ENV=development && nodemon --ignore './build/' --exec 'yarn run build && node -- build/server/js/bundle.js'"
+    "start:prod": "export NODE_ENV=development && nodemon --ignore './build/' --exec 'yarn run build && node -- build/server/js/serverBundle.js'"
   },
   "dependencies": {
     "@apollo/client": "^3.2.0",
