Auto-switch between meteor/webpack; add start-dev-db target to webpack

--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
     "tsc": "tsc --noEmit --skipLibCheck",
     "eslint": "eslint --max-warnings 0 --cache --ext .jsx,js,tsx,ts packages",
     "prestart": "bash prestart_lesswrong.sh",
-    "start": "meteor --exclude-archs web.browser.legacy --settings settings-dev.json",
-    "start-prod-db": "../LessWrong-Credentials/run-local-dev-proddb.sh",
-    "start-dev-db": "../LessWrong-Credentials/run-local-dev-devdb.sh",
-    "debug": "meteor --settings settings-dev.json --inspect run",
-    "start-af": "meteor --settings settings-af.json",
-    "start-af-dev-db": "../LessWrong-Credentials/run-local-dev-af-devdb.sh",
-    "start-af-second": "MONGO_URL=mongodb://localhost:3001/meteor meteor --settings settings-af.json --port 3030",
-    "start-af-prod-db": "../LessWrong-Credentials/run-local-dev-af-proddb.sh",
-    "debug-af": "meteor --settings settings-af.json --inspect run",
-    "test-watch": "TEST_WATCH=1 meteor test-packages ./packages/lesswrong --driver-package meteortesting:mocha --exclude-archs web.browser.legacy --settings sample_settings.json --port 3200 --full-app",
-    "test": "meteor test-packages ./packages/lesswrong --driver-package meteortesting:mocha --exclude-archs web.browser.legacy --settings sample_settings.json --port 3200 --full-app --once",
-    "test-prod": "meteor test-packages ./packages/lesswrong --driver-package meteortesting:mocha --exclude-archs web.browser.legacy --settings settings.json --port 3200 --full-app --once",
+    "start": "scripts/useMeteor.sh && meteor --exclude-archs web.browser.legacy --settings settings-dev.json",
+    "start-prod-db": "scripts/useMeteor.sh && ../LessWrong-Credentials/run-local-dev-proddb.sh",
+    "start-dev-db": "scripts/useMeteor.sh && ../LessWrong-Credentials/run-local-dev-devdb.sh",
+    "debug": "scripts/useMeteor.sh && meteor --settings settings-dev.json --inspect run",
+    "start-af": "scripts/useMeteor.sh && meteor --settings settings-af.json",
+    "start-af-dev-db": "scripts/useMeteor.sh && ../LessWrong-Credentials/run-local-dev-af-devdb.sh",
+    "start-af-second": "scripts/useMeteor.sh && MONGO_URL=mongodb://localhost:3001/meteor meteor --settings settings-af.json --port 3030",
+    "start-af-prod-db": "scripts/useMeteor.sh && ../LessWrong-Credentials/run-local-dev-af-proddb.sh",
+    "debug-af": "scripts/useMeteor.sh && meteor --settings settings-af.json --inspect run",
+    "test-watch": "scripts/useMeteor.sh && TEST_WATCH=1 meteor test-packages ./packages/lesswrong --driver-package meteortesting:mocha --exclude-archs web.browser.legacy --settings sample_settings.json --port 3200 --full-app",
+    "test": "scripts/useMeteor.sh && meteor test-packages ./packages/lesswrong --driver-package meteortesting:mocha --exclude-archs web.browser.legacy --settings sample_settings.json --port 3200 --full-app --once",
+    "test-prod": "scripts/useMeteor.sh && meteor test-packages ./packages/lesswrong --driver-package meteortesting:mocha --exclude-archs web.browser.legacy --settings settings.json --port 3200 --full-app --once",
     "encrypt-credentials": "tar czf credentials.tar.gz --exclude '.git/*' -C ../ ./LessWrong-Credentials; travis encrypt-file credentials.tar.gz --add; rm credentials.tar.gz",
     "generate": "scripts/generateTypes.sh",
     "rebuild-reinstall-ckeditor": "cd ./public/lesswrong-editor && yarn install && yarn run build && cd ../.. && yarn add ./public/lesswrong-editor",
