--- a/express/tsconfig.json
+++ b/express/tsconfig.json
@@ -10,13 +10,18 @@
     "target": "es5",
     "sourceMap": true,
     "moduleResolution": "node",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+
+    "downlevelIteration": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true
   },
   "include": [
     "./src"
   ],
   "exclude": [
     "node_modules",
-    "build"
-  ],
+    "build",
+    "src/platform/meteor"
+  ]
 }
