--- a/package.json
+++ b/package.json
@@ -218,6 +218,7 @@
     "@typescript-eslint/parser": "^4.8.1",
     "autoprefixer": "^6.3.6",
     "babel-eslint": "^10.1.0",
+    "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "eslint": "^7.14.0",
     "eslint-config-ckeditor5": "^3.1.0",
