Fix a Jest unit-test fail by mucking with Babel settings used only by Jest

--- a/express/package.json
+++ b/express/package.json
@@ -194,6 +194,7 @@
     "@babel/core": "7.12.3",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-proposal-optional-chaining": "^7.12.1",
+    "@babel/plugin-transform-react-jsx": "^7.12.11",
     "@babel/plugin-transform-runtime": "7.11.5",
     "@babel/preset-env": "7.11.5",
     "@babel/preset-react": "7.10.4",
@@ -204,6 +205,7 @@
     "@shelf/jest-mongodb": "^1.2.3",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "esbuild": "^0.8.21",
